# math_practice

./: CMakeLists.txt  package.xml
include/math_practice/: eigen_practice.hpp  nonlinear_optimization.hpp  spdlog_enhance.hpp
src/: eigen_practice.cpp  main.cpp  main_nonlinear_optimization.cpp
src/math_practice/: nonlinear_optimization.cpp
