<?xml version="1.0"?>
<package format="3">
  <name>math_practice</name>
  <version>0.0.0</version>
  <description>学习 Eigen的练习包</description>
  <maintainer email="keyao_li@todo.todo">keyao_li</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>spdlog</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>